--- a/styles/style.css
+++ b/styles/style.css
@@ -1,65 +1,197 @@
-            * {
-                font-family: 'Times New Roman', Times, serif;
-            }
-            
-            .numero {
-                color: black;
-            }
-            
-            .menu {
-                background-color: rgb(18, 165, 170);
-                text-align: center;
-                color: rgb(248, 245, 245);
-            }
-            
-            .phrase {
-                text-align: center;
-                color: black;
-                font-size: large;
-                font-family: Arial, Helvetica, sans-serif;
-                font-weight: lighter;
-                justify-content: center;
-            }
-            
-            .dessus {
-                z-index: 2;
-                /* margin-top: 120px; */
-                background-color: rgba(206, 119, 37, 0.644);
-            }
-            
-            .vertical {
-                border-left: 1px solid black;
-                height: 270px;
-                display: inline-block;
-            }
-            
-            .hyper {
-                text-align: center;
-                color: black;
-                font-size: 40px;
-                font-family: Arial, Helvetica, sans-serif;
-                font-weight: 700px;
-                justify-content: center;
-            }
-            
-            .couleur {
-                background-color: aliceblue;
-            }
-            
-            .titres {
-                /* // background-color: rgb(64, 158, 163); */
-                background-color: rgb(18, 165, 170);
-                ;
-            }
-            
-            .nav-links {
-                color: white;
-                text-decoration: none;
-                justify-self: center;
-                text-align: justify;
-                text-justify: auto;
-            }
-            /* .ligne_horizontal {
+    * {
+        font-family: 'Times New Roman', Times, serif;
+        padding: 0px;
+        margin: 0px;
+        box-sizing: border-box;
+        list-style: none;
+    }
+    
+    nav {
+        /* background: rgb(66, 176, 176); */
+        height: 50px;
+        width: 100%;
+    }
+    
+    label.logo {
+        color: black;
+        font-size: 30px;
+        /* padding: 0px 100px; */
+        font-weight: bold;
+        margin-left: 20px;
+    }
+    
+    nav ul {
+        /* float: right; */
+        justify-content: center;
+        margin-right: 20px;
+    }
+    
+    nav ul li {
+        display: inline-block;
+        line-height: 20px;
+        margin: 0px 5px;
+        text-transform: uppercase;
+    }
+    
+    nav ul li a {
+        /* color: rgb(9, 2, 2); */
+        color: rgb(244, 235, 235);
+        font-size: 13px;
+        padding: 25px;
+        margin-top: 5px;
+    }
+    
+    .checkbtn {
+        font-size: 30px;
+        color: rgb(42, 112, 209);
+        float: right;
+        line-height: 70px;
+        margin-right: 30px;
+        display: none;
+    }
+    
+    #check {
+        display: none;
+    }
+    
+    @media screen and (max-width: 730px) {
+        label.logo {
+            font-size: 30px;
+            padding-left: 40px;
+        }
+        nav ul li a {
+            font-size: 13px;
+        }
+    }
+    
+    @media screen and (max-width: 350px) {
+        .checkbtn {
+            display: block;
+        }
+        ul {
+            position: fixed;
+            font-size: 13px;
+            width: 100%;
+            height: 100vh;
+            background: rgb(140, 140, 213);
+            top: 80px;
+            left: -100%;
+            text-align: center;
+        }
+        nav ul li {
+            display: block;
+        }
+        nav ul li a {
+            font-size: 20px;
+        }
+        a.hover,
+        a:active {
+            background: none;
+            color: rgb(120, 175, 209);
+            border-radius: 5px;
+        }
+        #check:checked~ul {
+            left: 0;
+        }
+    }
+    
+    @media screen and (max-width: 950px) {
+        .checkbtn {
+            display: block;
+        }
+        ul {
+            position: fixed;
+            font-size: 16px;
+            width: 100%;
+            height: 100vh;
+            background: rgb(158, 214, 239);
+            top: 80px;
+            left: -100%;
+            text-align: center;
+        }
+        nav ul li {
+            display: block;
+        }
+        nav ul li a {
+            font-size: 13px;
+        }
+        a.hover,
+        a:active {
+            background: none;
+            color: blue;
+        }
+        #check:checked~ul {
+            left: 0;
+        }
+    }
+    
+    a.active,
+    a:hover {
+        background: blue;
+    }
+    
+    .numero {
+        color: black;
+        font-size: large;
+        font-weight: bold;
+    }
+    
+    .menu {
+        background-color: rgb(18, 165, 170);
+        /* background-color: #7a9cec; */
+        text-align: center;
+        color: rgb(248, 245, 245);
+        align-items: center;
+        height: 30px;
+    }
+    
+    .phrase {
+        text-align: center;
+        color: black;
+        font-size: large;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: lighter;
+        justify-content: center;
+    }
+    
+    .dessus {
+        z-index: 2;
+        /* margin-top: 120px; */
+        background-color: rgba(206, 119, 37, 0.644);
+    }
+    
+    .vertical {
+        border-left: 1px solid black;
+        height: 270px;
+        display: inline-block;
+    }
+    
+    .hyper {
+        text-align: center;
+        color: black;
+        font-size: 40px;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: 700px;
+        justify-content: center;
+    }
+    
+    .couleur {
+        background-color: aliceblue;
+    }
+    
+    .titres {
+        /* // background-color: rgb(64, 158, 163); */
+        background-color: rgb(18, 165, 170);
+        ;
+    }
+    /* .nav-links {
+    color: white;
+    text-decoration: none;
+    justify-self: center;
+    text-align: justify;
+    text-justify: auto;
+} */
+    /* .ligne_horizontal {
     display: flex;
     flex-direction: row;
 }
@@ -70,52 +202,128 @@
     border-bottom: 1px solid rgb(104, 102, 102);
     margin: auto;
 } */
-            
-            .accueil {
-                background-image: url("../images/marteau.jpg");
-                background-repeat: no-repeat;
-                background-attachment: fixed;
-                text-align: center;
-                background-position: center center;
-                justify-content: center;
-                background-size: cover;
-                height: 650px;
-                max-width: 100%;
-            }
-            
-            @media only screen and (max-width:768px) {
-                .navbar-brand {
-                    max-width: 100px;
-                }
-                .navbar-toggler {
-                    right: 0;
-                    position: absolute;
-                    margin: 10px;
-                }
-            }
-            
-            .over {
-                color: rgb(14, 13, 13);
-                position: absolute;
-                margin-top: 250px;
-                margin-left: 40px;
-                font-style: normal;
-                font-weight: bolder;
-                font-size: 48px;
-                justify-content: center;
-                justify-items: center;
-            }
-            
-            .paragraph {
-                text-decoration-line: overline underline;
-                transform: scale();
-            }
-            
-            .tire {
-                font-size: 40px;
-                font-weight: 700;
-            }
-            /* .paralaxe {
+    
+    .accueil {
+        background-image: url("../images/marteau.jpg");
+        /* background-image: url("../images/droit-civil-2.jpg"); */
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        text-align: center;
+        background-position: center center;
+        justify-content: center;
+        background-size: cover;
+        height: 600px;
+        /* max-width: 100%; */
+    }
+    
+    .accueilequipe {
+        background-image: url("../images/marteau.jpg");
+        /* background-image: url("../images/droit-civil-2.jpg"); */
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        text-align: center;
+        background-position: center center;
+        justify-content: center;
+        background-size: cover;
+        height: 300px;
+        /* max-width: 100%; */
+    }
+    
+    .container {
+        padding: 0 1em;
+    }
+    
+    @media only screen and (max-width: 768px) {
+        .accueil {
+            /* background-image: url("../images/marteau.jpg"); */
+            background-image: url("../images/droit-civil-2.jpg");
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            text-align: center;
+            background-position: center center;
+            justify-content: center;
+            background-size: cover;
+            height: max-content;
+        }
+    }
+    
+    @media only screen and (max-width:350px) {
+        .accueil {
+            /* background-image: url("../images/marteau.jpg"); */
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            text-align: center;
+            background-position: center center;
+            justify-content: center;
+            background-size: cover;
+            height: max-content;
+        }
+    }
+    
+    @media only screen and (max-width:1080px) {
+        .accueil {
+            /* background-image: url("../images/marteau.jpg"); */
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            text-align: center;
+            background-position: center center;
+            justify-content: center;
+            background-size: cover;
+            height: max-content;
+        }
+    }
+    
+    @media only screen and (max-width:390px) {
+        .navbar-brand {
+            max-width: 100px;
+        }
+        .navbar-toggler {
+            right: 0;
+            position: absolute;
+            margin: 10px;
+        }
+        .footer {
+            width: 700x;
+        }
+        .rond {
+            max-width: 350px;
+        }
+    }
+    
+    @media only screen and (max-width:768px) {
+        .navbar-brand {
+            max-width: 100px;
+        }
+        .navbar-toggler {
+            right: 0;
+            position: absolute;
+            margin: 10px;
+        }
+        .footer {
+            width: 700x;
+        }
+    }
+    
+    .over {
+        color: rgb(14, 13, 13);
+        /* position: absolute; */
+        margin-top: 250px;
+        margin-left: 40px;
+        font-style: normal;
+        font-weight: bolder;
+        font-size: 48px;
+        justify-content: center;
+        justify-items: center;
+    }
+    
+    .paragraph {}
+    
+    .tire {
+        font-size: 40px;
+        font-weight: 700;
+        margin-top: 150px;
+    }
+    /* .paralaxe {
     background-image: url("../images/justitia-g3bdcce1ef_1920.jpg");
     background-size: contain;
     background-size: cover;
@@ -123,89 +331,115 @@
     background-repeat: no-repeat;
     height: 600%;
 } */
-            
-            .backfix {
-                background-image: url("../images/scroll.jpg");
-                background-repeat: none;
-                background-attachment: fixed;
-                display: flex;
-                justify-content: center;
-                background-size: cover;
-            }
-            
-            .scroll {
-                width: auto;
-                height: 300px;
-                text-align: center;
-                margin-top: 50px;
-                /* margin-bottom: 50px; */
-                background-color: rgba(0, 255, 255, 0.212);
-            }
-            
-            .card-header {
-                background-color: rgb(18, 165, 170);
-            }
-            
-            .transition {
-                width: auto;
-                height: 200px;
-                text-align: center;
-                margin-top: 100px;
-                margin-bottom: 50px;
-                /* background-color: white; */
-                /* color: rgb(18, 165, 170); */
-            }
-            
-            .profil {
-                height: 250px;
-                width: 255px;
-                box-shadow: 10px;
-            }
-            
-            .color {
-                background-color: rgb(240, 129, 25);
-                ;
-            }
-            
-            .footer {
-                height: auto;
-            }
-            
-            .linestyle {
-                display: block;
-                background-color: #ff8800;
-                width: 48px;
-                height: 8px;
-                border-radius: 8px;
-                -webkit-border-radius: 8px;
-            }
-            
-            .rond {
-                border-radius: 5%;
-                width: 550px;
-            }
-            
-            .ligne_horizontal {
-                display: flex;
-                flex-direction: row;
-            }
-            
-            .ligne_horizontal:before,
-            .ligne_horizontal:after {
-                content: "";
-                flex: 1 1;
-                border-bottom: 2px solid #000;
-                margin: auto;
-            }
-            
-            .center {
-                display: block;
-                margin-left: auto;
-                margin-right: auto;
-                width: 50%;
-            }
-            
-            .colorback {
-                background-color: rgba(129, 180, 198, 0.644);
-                margin-top: -350px;
-            }
+    
+    .backfix {
+        background-image: url("../images/scroll.jpg");
+        background-repeat: none;
+        background-attachment: fixed;
+        display: flex;
+        justify-content: center;
+        background-size: cover;
+    }
+    
+    .scroll {
+        width: auto;
+        height: 300px;
+        text-align: center;
+        margin-top: 50px;
+        /* margin-bottom: 50px; */
+        background-color: rgba(0, 255, 255, 0.212);
+    }
+    
+    .card-header {
+        background-color: rgb(18, 165, 170);
+    }
+    
+    .transition {
+        width: auto;
+        height: 200px;
+        text-align: center;
+        margin-top: 100px;
+        margin-bottom: 50px;
+        /* background-color: white; */
+        /* color: rgb(18, 165, 170); */
+    }
+    
+    .profil {
+        height: 250px;
+        width: 255px;
+        box-shadow: 10px;
+    }
+    
+    .color {
+        background-color: rgb(240, 129, 25);
+        ;
+    }
+    
+    .footer {
+        background-color: #000;
+        background-size: cover;
+        background-position: center center;
+    }
+    
+    .linestyle {
+        display: block;
+        background-color: #ff8800;
+        width: 48px;
+        height: 8px;
+        border-radius: 8px;
+        -webkit-border-radius: 8px;
+    }
+    
+    .rond {
+        border-radius: 25px;
+        height: 450px;
+        width: 550px;
+    }
+    
+    .ligne_horizontal {
+        display: flex;
+        flex-direction: row;
+    }
+    
+    .ligne_horizontal:before,
+    .ligne_horizontal:after {
+        content: "";
+        flex: 1 1;
+        border-bottom: 2px solid #000;
+        margin: auto;
+    }
+    
+    .center {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+    }
+    
+    .colorback {
+        background-color: rgba(129, 180, 198, 0.644);
+        margin-top: -350px;
+    }
+    
+    @media screen and (max-width: 1080px) {
+        button {
+            display: none;
+        }
+        .nav-links li {
+            padding: 0px 10px;
+        }
+        header {
+            display: block;
+            text-align: right;
+        }
+    }
+    
+    @media screen and (max-width: 730px) {
+        .nav-links {
+            display: none;
+        }
+        header {
+            display: block;
+            text-align: right;
+        }
+    }
